--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^15.0.0",
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
+    "@angular/forms": "^15.2.10",
+    "@angular/material": "~15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
@@ -23,6 +27,7 @@
     "@preline/overlay": "^2.0.2",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
+    "ngx-multiple-dates": "^15.0.1",
     "preline": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
