--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "json-server": "json-server --watch db.json -m ./node_modules/json-server-auth",
+    "json-server-delayed": "json-server --watch db.json -m ./node_modules/json-server-auth -d 3000"
   },
   "private": true,
   "dependencies": {
