--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/@ngneat/hot-toast/src/styles/styles.css",
               "src/styles.css"
             ],
             "scripts": []
